# Students-API

./: README.md  contributing.md  pyproject.toml
account/: models.py  serializers.py  urls.py  views.py
account/fixtures/: account.yaml  data.yaml  parent.yaml
account/migrations/: 0001_initial.py  0002_alter_account_table.py  0002_alter_account_unique_together.py  0003_alter_account_parent.py  0003_alter_account_password.py  0004_alter_account_unique_together.py
account/tests/: tests_functions.py  tests_models.py  tests_views.py
parent/: forms.py  middlewares.py  models.py  permissions.py  serializers.py  urls.py  views.py
parent/migrations/: 0001_initial.py  0002_alter_parent_id.py  0003_alter_parent_name.py
school/: settings.py  urls.py
student/: db.json  forms.py  models.py  serializers.py  urls.py  views.py
student/migrations/: 0001_initial.py  0002_alter_student_id.py  0002_auto_20221026_1200.py  0002_rename_birthday_student_birthdate.py  0003_auto_20221026_1202.py  0004_alter_student_id.py  0005_remove_student_subjects.py  0006_auto_20221027_1333.py
subject/: forms.py  models.py  serializers.py  urls.py  views.py
subject/migrations/: 0001_initial.py  0002_alter_subject_id.py  0003_subject_students.py  0004_alter_subject_students.py  0005_alter_subject_students.py
tokens/: admin.py  models.py
tokens/migrations/: 0001_initial.py  0002_alter_tokens_token.py
