[tool.poetry]
name = "sudents-api"
version = "0.1.0"
description = ""
authors = ["Ahmed Hossam"]
readme = "README.md"
packages = [{include = "sudents_api"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
dotenv = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
