[tool.poetry]
name = "students-api"
version = "0.1.0"
description = ""
authors = ["Ahmed Hossam"]
readme = "README.md"
packages = [{include = "students_api"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
dotenv = "^0.0.5"
djangorestframework = "^3.14.0"
django-rest-framework = "^0.1.0"
drf-yasg = "^1.21.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
